--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ cache:
 environment:
   global:
     STACK_ROOT: "c:\\sr"
+    PATH_TO_PG_CONFIG: "C:\\Program Files (x86)\\PostgreSQL\\9.6\\bin"
 
 build: off
 test: off
@@ -17,6 +18,7 @@ branches:
 before_build:
 - curl -sS -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64
 - 7z x stack.zip stack.exe
+- "SET PATH=%PATH_TO_PG_CONFIG%;%PATH%"
 
 build_script:
 - stack setup --no-terminal > nul
