--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,11 @@ cache:
 - "c:\\sr"
 
 environment:
-  PATH_TO_PG_CONFIG: "C:\\Program Files (x86)\\PostgreSQL\\9.6\\bin"
   global:
     STACK_ROOT: "c:\\sr"
+
+matrix:
+  - PATH_TO_PG_CONFIG: "C:\\Program Files (x86)\\PostgreSQL\\9.6\\bin"
 
 build: off
 test: off
