--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,9 +6,9 @@ cache:
 environment:
   global:
     STACK_ROOT: "c:\\sr"
+    PATH_TO_PG_CONFIG: "C:\\Program Files (x86)\\PostgreSQL\\9.5\\bin"
 
 matrix:
-  - PATH_TO_PG_CONFIG: "C:\\Program Files (x86)\\PostgreSQL\\9.6\\bin"
 
 build: off
 test: off
