--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,9 @@
-image: Visual Studio 2015
-
-services:
-  - postgresql
-
 cache:
 - "c:\\sr"
 
 environment:
   global:
     STACK_ROOT: "c:\\sr"
-    PATH_TO_PG_CONFIG: "C:\\Program Files (x86)\\PostgreSQL\\9.6\\bin"
 
 build: off
 test: off
@@ -18,18 +12,10 @@ branches:
   only:
     - windows-auto-release
 
-install:
-  - "SET PATH=%PATH_TO_PG_CONFIG%;%PATH%"
-
-  - ECHO "Current PATH:"
-  - cmd: ECHO %PATH%
-
-  - ECHO "Debug: Running pg_config.exe"
-  - cmd: PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH% pg_config
-
 before_build:
 - curl -sS -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64
 - 7z x stack.zip stack.exe
+- PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
 
 build_script:
 - stack setup --no-terminal > nul
