--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ before_build:
 - curl -sS -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64
 - 7z x stack.zip stack.exe
 - PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
+- pg_config
 
 build_script:
 - stack setup --no-terminal > nul
