--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,3 @@
-platform: x64
-
 cache:
 - "c:\\sr"
 
@@ -14,22 +12,27 @@ branches:
   only:
     - windows-auto-release
 
-before_build:
+install:
+- set PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
 - curl -sS -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64
 - 7z x stack.zip stack.exe
-- set PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
 
 build_script:
 - stack build --install-ghc --copy-bins --local-bin-path .
-- 7z a -tzip postgrest-0.4.3.0-windows-x64.zip postgrest.exe
 
 artifacts:
-- path: postgrest-0.4.3.0-windows-x64.zip
+- path: postgrest.exe
+
+before_deploy:
+- 7z a -tzip postgrest-v0.4.3.0-windows-x64.zip postgrest.exe
+- dir
 
 deploy:
-  - provider: Environment
-    on:
-      branch: windows-auto-release
-
-after_deploy:
-- dir
+  provider: GitHub
+  tag: v0.4.3.0
+  description: ''
+  auth_token:
+    secure: $(GITHUB_TOKEN)
+  artifact: postgrest-v0.4.3.0-windows-x64.zip
+  on:
+    branch: windows-auto-release
