--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 version: 2
 jobs:
   build-test:
-    machine:
-      enabled: true
+    machine: true
     steps:
       - checkout
       - restore_cache:
@@ -13,7 +12,9 @@ jobs:
           command: |
             curl -L https://github.com/commercialhaskell/stack/releases/download/v1.1.2/stack-1.1.2-linux-x86_64.tar.gz | tar zx -C /tmp
             sudo mv /tmp/stack-1.1.2-linux-x86_64/stack /usr/bin
-            sudo apt-get update; sudo apt-get install --only-upgrade binutils
+            sudo apt-get update
+            sudo apt-get install libgmp-dev
+            sudo apt-get install --only-upgrade binutils
       - run:
           name: setup stack
           command: |
