--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,6 @@ jobs:
   build-test:
     machine: true
     steps:
-      - run: sudo service postgresql start
-      - run: pg_isready -h localhost -p 5432 -U ubuntu
       - checkout
       - restore_cache:
           keys:
@@ -28,6 +26,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            sudo service postgresql start
             POSTGREST_TEST_CONNECTION=$(test/create_test_db "postgres://ubuntu@localhost" postgrest_test) stack test
             test/io-tests.sh
       - run:
