--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build-test:
     machine: true
     steps:
+      - run: pg_isready -h localhost -p 5432 -U ubuntu
       - checkout
       - restore_cache:
           keys:
