--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
 
   build-centos6-bin:
     docker:
-      - image: alpine:3.4
+      - image: buildpack-deps:trusty
     steps:
       - run:
           name: build binary
@@ -63,7 +63,7 @@ jobs:
 
   build-centos7-bin:
     docker:
-      - image: alpine:3.4
+      - image: buildpack-deps:trusty
     steps:
       - run:
           name: build binary
@@ -77,7 +77,7 @@ jobs:
 
   release:
     docker:
-      - image: alpine:3.4
+      - image: buildpack-deps:trusty
     steps:
       - attach_workspace:
           at: /tmp/bin
