--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           command: |
             mkdir -p /tmp/bin/
             echo "postgrest binary" > /tmp/bin/postgrest
-            tar cjf postgrest-centos6.tar.xz postgrest
+            tar cjf postgrest-centos6.tar.xz -C /tmp/bin postgrest
       - persist_to_workspace:
           root: /tmp/bin/
           paths:
@@ -71,7 +71,7 @@ jobs:
           command: |
             mkdir -p /tmp/bin/
             echo "postgrest binary" > /tmp/bin/postgrest
-            tar cjf postgrest-centos7.tar.xz postgrest
+            tar cjf postgrest-centos7.tar.xz -C /tmp/bin postgrest
       - persist_to_workspace:
           root: /tmp/bin/
           paths:
